--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-in-memory-web-api": "^0.5.3",
     "core-js": "^2.4.1",
     "ng-zorro-antd": "^0.6.15",
+    "ng2-dragula": "^1.5.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
